# pocketutils

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  codemeta.json  mkdocs.yaml  package.json  pyproject.toml  readthedocs.yml  tox.ini
.github/: dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yaml  config.yml  docs.yaml  feature.yaml  performance.yaml
.github/workflows/: bump.yaml  check-links.yaml  deploy-docs.yaml  deploy-packages.yaml  publish.yml  pull-request.yaml  pull-test.yml  push-main.yml  push.yaml  sync-tags.yaml  test.yaml
docs/: SUMMARY.md  analysis.rst  biochem.rst  conf.py  core.rst  dataframes.rst  decorators.rst  errors.rst  index.md  index.rst  jupyter.rst  misc.rst  ml.rst  organization.rst  plotting.rst  ref.md  requirements.txt  start.rst  support.rst  toc.rst  tools.rst
docs/overrides/: main.html
pocketutils/: __init__.py  full.py
pocketutils/biochem/: atc_tree.py  multiwell_plate_rois.py  multiwell_plates.py  tissue_expression.py  uniprot_go.py
pocketutils/core/: __init__.py  _internal.py  chars.py  decorators.py  dot_dict.py  enums.py  exceptions.py  frozen_types.py  hasher.py  hashers.py  input_output.py  internal.py  io.py  iterators.py  mocks.py  query_utils.py  smartio.py  toml_data.py  web_resource.py
pocketutils/db/: connection.py
pocketutils/logging/: fancy_logger.py  fancy_loguru.py  flexible_logger.py  log_format.py  warning_utils.py
pocketutils/misc/: colored_notifications.py  connection.py  console.py  df_mem_cache.py  fancy_console.py  fancy_loguru.py  j.py  klgists.py  loguru_utils.py  mem_cache.py  messages.py  notifiers_utils.py  query_utils.py  resources.py  smartio.py  typer_utils.py  warning_utils.py  web_resource.py
pocketutils/notebooks/: j.py  magic_template.py
pocketutils/plotting/: _bound_ticks.py  bound_ticks.py  color_schemes.py  corners.py  fig_savers.py  fig_tools.py  ref_dims.py
pocketutils/tools/: all_tools.py  base_tools.py  call_tools.py  common_tools.py  console_tools.py  filesys_tools.py  git_description.py  io_tools.py  json_tools.py  loop_tools.py  numeric_tools.py  pandas_tools.py  parse_tools.py  path_info.py  path_tools.py  program_tools.py  reflection_tools.py  string_tools.py  sys_tools.py  unit_tools.py
src/pocketutils/: __init__.py  _meta.py
src/pocketutils/core/: __init__.py  chars.py  decorators.py  dot_dict.py  enums.py  exceptions.py  frozen_types.py  input_output.py  iterators.py  mocks.py  smartio.py
src/pocketutils/misc/: async_query_utils.py  loguru_utils.py  query_utils.py
src/pocketutils/tools/: call_tools.py  common_tools.py  console_tools.py  filesys_tools.py  git_description.py  git_tools.py  io_tools.py  json_tools.py  numeric_tools.py  parse_tools.py  path_info.py  path_tools.py  program_tools.py  reflection_tools.py  sort_tools.py  string_tools.py  sys_tools.py  unit_tools.py
tests/: test_typer_utils.py
tests/pocketutils/: __init__.py
tests/pocketutils/biochem/: test_tissue_expression.py  test_well_name.py
tests/pocketutils/core/: __init__.py  test_chars.py  test_core.py  test_dot_dict.py  test_exceptions.py  test_frozen_types.py  test_hasher.py  test_hashers.py  test_input_output.py  test_io.py  test_iterators.py  test_messages.py  test_warning_utils.py  test_web_resource.py
tests/pocketutils/misc/: test_fancy_console.py  test_templates.py  test_toml_data.py  test_typer_utils.py  test_web_resource.py
tests/pocketutils/notebooks/: test_templates.py
tests/pocketutils/support/: test_toml_data.py  test_web_resource.py
tests/pocketutils/tools/: __init__.py  test_base_tools.py  test_common_tools.py  test_filesys_tools.py  test_json_utils.py  test_numeric_tools.py  test_pandas_tools.py  test_path_tools.py  test_sort_utils.py  test_string_tools.py  test_sys_tools.py  test_unit_tools.py
tests/resources/core/: already_hashed.txt  already_hashed.txt.sha1  bad_hash.txt.sha1
